# docscribe

./: .env.example  .gitignore  README.md  docker-compose.yml  tasks.md
apps/api/: .env.example  Dockerfile  pyproject.toml  railway.json
apps/api/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
apps/api/app/core/: pdf.py  prompts.py  summarization.py  transcription.py
apps/api/app/repositories/: message.py  thread.py  user.py
apps/api/app/routers/: audio.py  messages.py  pdf.py  text.py  threads.py
apps/web/: .env.local.example  Dockerfile  package-lock.json  package.json  railway.json  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/app/: layout.tsx  page.tsx
apps/web/src/components/audio/: AudioRecorder.tsx  RecordingIndicator.tsx
apps/web/src/components/input/: MessageInput.tsx
apps/web/src/components/layout/: Sidebar.tsx  SidebarContext.tsx  SidebarThreadItem.tsx  TopBar.tsx
apps/web/src/components/providers/: Providers.tsx  QueryProvider.tsx  ThemeProvider.tsx
apps/web/src/components/session/: LeitoCard.tsx  (+5 more)
apps/web/src/hooks/: useAudioRecorder.ts  useSession.ts  useStreamingSummary.ts  useThreads.ts
apps/web/src/lib/: api.ts  auth.ts  utils.ts
apps/web/src/types/: api.ts  session.ts
chainlit/: .dockerignore  .env.example  Dockerfile  app.py  chainlit.md  core.py  data_layer.py  database.py  railway.json  requirements.txt
chainlit/.chainlit/: config.toml
chainlit/public/: group-threads-by-date.css  group-threads-by-date.js
chainlit/public/elements/: TranscriptionAccordion.jsx
(+4 files in other folders)
